--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,20 @@ services:
 
   # The Application
   app:
-    build:
-      context: ./
-      dockerfile: app.dockerfile
+    # build:
+    #   context: ./
+    #   dockerfile: app.dockerfile
+    image: ntvinh1620/laravel
     working_dir: /var/www
     volumes:
       - ./:/var/www
 
   # The Web Server
   web:
-    build:
-      context: ./
-      dockerfile: web.dockerfile
+    # build:
+    #   context: ./
+    #   dockerfile: web.dockerfile
+    image: ntvinh1620/laravel_web
     working_dir: /var/www
     volumes_from:
       - app
